--- a/public/app/pages/nomenclature/detailsPanel/detailsPanel.html
+++ b/public/app/pages/nomenclature/detailsPanel/detailsPanel.html
@@ -5,8 +5,8 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-8 hidden-sm hidden-xs">
                         <h3>
-                            Список заказов <discription ng-if="clientName != null">(от клиента "{{clientName}}")</discription>
-                            <a ng-if="clientName != null" ui-sref="home" class="pull-right ng-scope">Назад</a>
+                            Номенклатура <discription ng-if="order != null">(заказ "{{order.code}}")</discription>
+                            <a ng-if="order != null" ui-sref="orders-custom({id: order.clientId})" class="pull-right ng-scope">Назад</a>
                         </h3>
                     </div>
                     <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
@@ -25,26 +25,28 @@
                 <table ng-if="!loading" class="table table-bordered table-hover">
                     <thead>
                     <tr ng-if="list.length != 0" class="black-muted-bg">
-                        <td class="align-center">Шифр</td>
-                        <td ng-if="showClient" class="align-center">Клиент</td>
-                        <td class="align-center">Статус</td>
+                        <td class="align-center">Шифр детали</td>
+                        <td class="align-center">Имя детали</td>
+                        <td ng-if="showOrder" class="align-center">Шифр заказа</td>
+                        <td class="align-center">Чертеж</td>
+                        <td class="align-center">Модель</td>
+                        <td class="align-center">Проект</td>
                         <td class="align-center">Дата создания</td>
-                        <td class="align-center">Дата начала</td>
-                        <td class="align-center">Крайний срок</td>
+                        <td class="align-center">Дата окончания</td>
                         <td class="align-right"></td>
                     </tr>
                     </thead>
                     <tbody>
                     <tr ng-if="list.length != 0" ng-repeat="item in list | filter:search" class="no-top-border" ng-class="{active: item.id == current}">
                         <td class="align-center">{{item.code}}</td>
-                        <td ng-if="showClient" class="align-center">{{item.clientName}}</td>
-                        <td class="align-center">{{item.status}}</td>
+                        <td class="align-center">{{item.name}}</td>
+                        <td ng-if="showOrder" class="align-center"><a ui-sref="nomenclature-custom({id: item.orderId})"></a>{{item.orderCode}}</td>
+                        <td class="align-center">{{(item.pattern == null) ? '---' : item.pattern}}</td>
+                        <td class="align-center">{{(item.model == null) ? '---' : item.model}}</td>
+                        <td class="align-center">{{(item.project == null) ? '---' : item.project}}</td>
                         <td class="align-center">{{item.dateCreation}}</td>
                         <td class="align-center">{{(item.dateStart == null) ? '---' : item.dateStart}}</td>
-                        <td class="align-center">{{(item.deadline == null) ? '---' : item.deadline}}</td>
-                        <td class="align-right">
-                            <a ui-sref="nomenclature-custom({id: item.id})" class="btn btn-xs btn-primary">Номенклатура</a>
-                        </td>
+                        <td class="align-right"><button class="btn btn-xs btn-primary">Кнопка</button></td>
                     </tr>
                     </tbody>
                 </table>
