--- a/public/app/pages/nomenclature/detailsPanel/detailsPanel.html
+++ b/public/app/pages/nomenclature/detailsPanel/detailsPanel.html
@@ -32,7 +32,7 @@
                         <td class="align-center">Модель</td>
                         <td class="align-center">Проект</td>
                         <td class="align-center">Дата создания</td>
-                        <td class="align-center">Дата окончания</td>
+                        <td class="align-center">Дата исполнения</td>
                         <td class="align-right"></td>
                     </tr>
                     </thead>
