--- a/public/app/pages/clients/clientsList/clientsList.html
+++ b/public/app/pages/clients/clientsList/clientsList.html
@@ -40,14 +40,19 @@
                 </div>
             </div>
             <div class="panel-body">
-                <div class="row">
-                    <div class="col-md-12">
-                        <pre class="text">{{client.info}}</pre>
-                    </div>
+                <div ng-if="loading" class="no-data">
+                    <i class="fa fa-spinner fa-spin"></i>
                 </div>
-                <div class="row">
-                    <div ng-if="(client.files != null && client.files.length != 0)" class="col-md-12 adds">
-                        <a ng-repeat="file in client.files" href="{{file.href}}">{{file.name}}</a>
+                <div ng-if="!loading">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <pre class="text">{{client.info}}</pre>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div ng-if="(client.files != null && client.files.length != 0)" class="col-md-12 adds">
+                            <a ng-repeat="file in client.files" href="{{file.href}}">{{file.name}}</a>
+                        </div>
                     </div>
                 </div>
             </div>
