Переделал логику бд, добавил плагины для работы с бд. Перенес ACL из global в модули.

--- a/public/app/pages/clients/clientsList/clientsList.html
+++ b/public/app/pages/clients/clientsList/clientsList.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="row">
                         <div ng-if="(client.files != null && client.files.length != 0)" class="col-md-12 adds">
-                            <a ng-repeat="file in client.files" href="{{file}}">{{file.substring(file.lastIndexOf('/')+1)}}</a>
+                            <a ng-repeat="file in client.files" class="btn btn-primary btn-xs" href="/files/{{file.id}}/{{file.name}}">{{file.name}}</a>
                         </div>
                     </div>
                 </div>
