--- a/public/app/pages/clients/modals/modalContainer.html
+++ b/public/app/pages/clients/modals/modalContainer.html
@@ -9,6 +9,6 @@
     <div ng-include="currModal.page"></div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary" ng-click="modalActions.close()">Save changes</button>
+    <button type="button" class="btn btn-danger" ng-click="modalActions.close()">Закрыть</button>
   </div>
 </div>
