--- a/public/app/pages/clients/modals/content/add.html
+++ b/public/app/pages/clients/modals/content/add.html
@@ -1,31 +1,33 @@
 <div class="row">
     <div class="col-md-12">
-        <form class="form-horizontal">
+        <form method="POST" action="/forms/clients/add" name="client-add" enctype="multipart/form-data" class="form-horizontal" role="form" id="client-add">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                <label class="col-sm-2 control-label" for="clientName">
+                    Имя клиента
+                </label>
                 <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    <input type="text" name="clientName" id="clientName" placeholder="Имя клиента" required="required" class="form-control">
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                <label class="col-sm-2 control-label" for="clientDescription">
+                    Описание клиента
+                </label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                    <textarea name="clientDescription" id="clientDescription" placeholder="Пароль" class="form-control"></textarea>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="file">
+                    Выбрать файл
+                </label>
+                <div class="col-sm-10">
+                    <input type="file" name="clientAdditions[]" id="file" multiple="multiple">
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <div class="checkbox">
-                        <label class="custom-checkbox">
-                            <input type="checkbox">
-                            <span>Remember me</span>
-                        </label>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-warning" ng-click="modalActions.close()">Sign in</button>
+                    <button type="submit" name="submit" class="btn btn-default">Добавить</button>
                 </div>
             </div>
         </form>
