--- a/public/app/pages/clients/clientsList/clientsList.html
+++ b/public/app/pages/clients/clientsList/clientsList.html
@@ -1,3 +1,4 @@
+<content-actions></content-actions>
 <div class="row">
     <div class="col-md-6">
         <div class="panel panel-primary with-search with-scroll xmedium-panel animated fadeInLeft">
@@ -55,7 +56,7 @@
                     </div>
                     <div class="row">
                         <div ng-if="(client.files != null && client.files.length != 0)" class="col-md-12 adds">
-                            <a ng-repeat="file in client.files" class="btn btn-primary btn-xs" href="/files/{{file.id}}/{{file.name}}">{{file.name}}</a>
+                            <a ng-repeat="file in client.files" class="btn btn-primary btn-xs" href="/files/{{file.id}}/{{file.name}}" download="">{{file.name}}</a>
                         </div>
                     </div>
                 </div>
