--- a/public/app/pages/orders/ordersList/ordersList.html
+++ b/public/app/pages/orders/ordersList/ordersList.html
@@ -1,3 +1,4 @@
+<content-actions></content-actions>
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-primary with-search animated fadeInUp">
@@ -27,31 +28,31 @@
                     <switch color="warning" ng-model="filter[2]">В работе</switch>
                     <switch color="success" ng-model="filter[3]">Исполненно</switch>
                 </div>
-                <table ng-if="!loading" class="table table-bordered table-hover table-with-labels">
+                <table ng-if="!loading" class="table table-bordered table-hover table-text-center table-with-labels">
                     <thead>
                     <tr ng-if="list.length != 0" class="black-muted-bg">
                         <td class="first-fixed"></td>
-                        <td class="align-center">
+                        <td>
                             <button class="btn btn-link" ng-click="sortBy('code')">Шифр</button>
                             <span class="sortorder" ng-show="propertyName === 'code'" ng-class="{reverse: reverse}"></span>
                         </td>
-                        <td ng-if="showClient" class="align-center">
+                        <td ng-if="showClient">
                             <button class="btn btn-link" ng-click="sortBy('clientName')">Клиент</button>
                             <span class="sortorder" ng-show="propertyName === 'clientName'" ng-class="{reverse: reverse}"></span>
                         </td>
-                        <td class="align-center">
+                        <td>
                             <button class="btn btn-link" ng-click="sortBy('dateCreation')">Дата создания</button>
                             <span class="sortorder" ng-show="propertyName === 'dateCreation'" ng-class="{reverse: reverse}"></span>
                         </td>
-                        <td class="align-center">
+                        <td>
                             <button class="btn btn-link" ng-click="sortBy('dateStart')">Дата начала</button>
                             <span class="sortorder" ng-show="propertyName === 'dateStart'" ng-class="{reverse: reverse}"></span>
                         </td>
-                        <td class="align-center">
+                        <td>
                             <button class="btn btn-link" ng-click="sortBy('dateEnd')">Дата исполнения</button>
                             <span class="sortorder" ng-show="propertyName === 'dateEnd'" ng-class="{reverse: reverse}"></span>
                         </td>
-                        <td class="align-center">
+                        <td>
                             <button class="btn btn-link" ng-click="sortBy('dateDeadline')">Срок исполнения</button>
                             <span class="sortorder" ng-show="propertyName === 'dateDeadline'" ng-class="{reverse: reverse}"></span>
                         </td>
@@ -60,15 +61,15 @@
                     </thead>
                     <tbody>
                     <tr ng-if="list.length != 0" ng-repeat="item in ((list | filter:filterBy) | filter:search) | orderBy:propertyName:reverse" class="no-top-border" ng-class="{active: item.id == current}">
-                        <td class="align-center" ng-init="labelClass = (item.statusCode == 1) ? 'label-primary' : (item.statusCode == 2) ? 'label-warning' : 'label-success'">
+                        <td ng-init="labelClass = (item.statusCode == 1) ? 'label-primary' : (item.statusCode == 2) ? 'label-warning' : 'label-success'">
                             <span class="label" ng-class="labelClass">{{item.status}}</span>
                         </td>
-                        <td class="align-center">{{item.code}}</td>
-                        <td ng-if="showClient" class="align-center">{{item.clientName}}</td>
-                        <td class="align-center">{{item.dateCreation}}</td>
-                        <td class="align-center">{{(item.dateStart == null) ? '---' : item.dateStart}}</td>
-                        <td class="align-center">{{(item.dateEnd == null) ? '---' : item.dateEnd}}</td>
-                        <td class="align-center">{{(item.dateDeadline == null) ? '---' : item.dateDeadline}}</td>
+                        <td>{{item.code}}</td>
+                        <td ng-if="showClient">{{item.clientName}}</td>
+                        <td>{{item.dateCreation}}</td>
+                        <td>{{(item.dateStart == null) ? '---' : item.dateStart}}</td>
+                        <td>{{(item.dateEnd == null) ? '---' : item.dateEnd}}</td>
+                        <td>{{(item.dateDeadline == null) ? '---' : item.dateDeadline}}</td>
                         <td class="align-right">
                             <a ui-sref="nomenclature-custom({id: item.id})" class="btn btn-xs btn-primary">Номенклатура</a>
                         </td>
