Обновил sql dump + мелкие правки

--- a/public/app/pages/nomenclature/detailsList/detailsList.html
+++ b/public/app/pages/nomenclature/detailsList/detailsList.html
@@ -7,7 +7,7 @@
                     <div class="col-md-6 col-lg-8 hidden-sm hidden-xs">
                         <h3>
                             Номенклатура <discription ng-if="order != null">(заказ "{{order.code}}")</discription>
-                            <a ng-if="order != null" href="javascript:window.history.back(-1)" class="pull-right ng-scope">Назад</a>
+                            <a ng-if="order != null" href="javascript:window.history.back(-1)" class="pull-right">Назад</a>
                         </h3>
                     </div>
                     <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
