--- a/public/app/pages/nomenclature/detail/detail.html
+++ b/public/app/pages/nomenclature/detail/detail.html
@@ -35,6 +35,16 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
+                                    <label for="usm_detail_group" class="col-md-3 control-label">Группа детали</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control" placeholder="Группа детали"
+                                               id="usm_detail_group"
+                                               name="usm_detail_group"
+                                               ng-model="detail.group"
+                                               bs3-typeahead bs3-source="groups" bs3-minLength="0" bs3-items="all">
+                                    </div>
+                                </div>
+                                <div class="form-group">
                                     <label for="usm_detail_code" class="col-md-3 control-label">Шифр детали</label>
                                     <div class="col-md-9">
                                         <input type="text" class="form-control" placeholder="Шифр детали"
@@ -142,6 +152,12 @@
                                         <p class="form-control-static">{{detail.name}}</p>
                                     </div>
                                 </div>
+                                <div class="form-group" ng-hide="detail.group == '' || detail.group == null">
+                                    <label class="col-md-5 control-label">Группа детали</label>
+                                    <div class="col-md-7">
+                                        <p class="form-control-static">{{detail.group}}</p>
+                                    </div>
+                                </div>
                                 <div class="form-group">
                                     <label class="col-md-5 control-label">Шифр детали</label>
                                     <div class="col-md-7">
@@ -173,19 +189,120 @@
                             </div>
                         </div>
                         <div ng-class="edit ? 'col-md-7' : 'col-md-9'">
-                            <div class="row">
-                                <div ng-class="edit ? 'col-md-4' : 'col-md-3'" ng-repeat="file in detail.pattern">
-                                    <div class="image-preview">
-                                        <div class="image-mask"></div>
-                                        <img ng-src="/files/{{file.id}}/{{file.name}}">
+                            <div ng-show="detail.pattern.length > 0">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="file-collection">
+                                            <h2>Чертежи</h2>
+                                            <button ng-show="edit" type="button" id="add-image" class="btn btn-primary btn-sm pull-right"
+                                                 uib-tooltip="Добавить чертеж" tooltip-placement="left"
+                                                 ng-click="modal()">
+                                                <i class="fa fa-plus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="alert alert-info" ng-show="new.patterns.length > 0">
+                                            <div id="new-patterns" ng-repeat="file in new.patterns" class="image-collection">
+                                                <div class="image-preview">
+                                                    <div class="image-mask"></div>
+                                                    <img ng-src="file.base64">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="alert alert-default">
+                                            <div ng-repeat="(fKey, file) in detail.pattern" class="image-collection">
+                                                <div class="image-preview">
+                                                    <div class="image-mask" ng-class="detail.pattern[fKey].update ? 'updated' : ''"></div>
+                                                    <div class="image-actions">
+                                                        <div class="image-actions-content">
+                                                            <button class="btn btn-success btn-image-action" ng-click="openGallery('main', fKey)">Просмотр <i class="fa fa-eye"></i></button>
+                                                            <div class="btn-group btn-block" uib-dropdown dropdown-append-to-body="true">
+                                                                <button class="btn btn-primary btn-image-action" uib-dropdown-toggle>
+                                                                    Все версиии
+                                                                    <span class="caret"></span>
+                                                                </button>
+                                                                <ul class="dropdown-menu" uib-dropdown-menu role="menu">
+                                                                    <li role="menuitem" ng-repeat="(vKey, version) in file.versions">
+                                                                        <a href ng-click="openGallery(file.id, vKey);">{{version.date}}</a>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                            <div class="btn-group btn-block" ng-show="edit">
+                                                                <button class="btn btn-info btn-image-action bi-checkbox">
+                                                                    <i ng-class="detail.pattern[fKey].update ? 'fa-check-square-o' : 'fa-square-o'" class="fa"></i>
+                                                                </button>
+                                                                <button class="btn btn-info btn-image-action bi-btn"
+                                                                    ng-click="detail.pattern[fKey].update = !detail.pattern[fKey].update">Изменить</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <img ng-src="/files/{{file.versions[0].id}}/{{file.name}}">
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-12"></div>
+                            <div ng-show="detail.model.length > 0 || edit || new.models.length > 0">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="file-collection">
+                                            <h2>Модели</h2>
+                                            <div ng-show="edit" class="btn btn-primary btn-sm btn-file pull-right"
+                                                 uib-tooltip="Добавить модель" tooltip-placement="left">
+                                                <i class="fa fa-plus"></i>
+                                                <input id="add-model" name="models[]" type="file" multiple="multiple" onchange="angular.element(this).scope().change.model(this)">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div id="new-models" class="alert alert-info" ng-show="new.models.length > 0">
+                                            <ul>
+                                                <li ng-repeat="models in new.models">{{models.name}}</li>
+                                            </ul>
+                                        </div>
+                                        <div class="alert alert-default" ng-show="detail.model.length > 0 || edit">
+                                            <h3 ng-hide="detail.model.length > 0">Моделей нет.</h3>
+                                            <span ng-repeat="model in detail.model">
+                                                <a class="btn btn-primary btn-xs" href="/files/{{model.versions[0].id}}/{{model.name}}" download="download">{{model.name}}</a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-12"></div>
+                            <div ng-show="detail.project.length > 0 || edit || new.projects.length > 0">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="file-collection">
+                                            <h2>Проекты</h2>
+                                            <div ng-show="edit" class="btn btn-primary btn-sm btn-file pull-right"
+                                                 uib-tooltip="Добавить модель" tooltip-placement="left">
+                                                <i class="fa fa-plus"></i>
+                                                <input id="add-project" name="projects[]" type="file" multiple="multiple" onchange="angular.element(this).scope().change.project(this)">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div id="new-projects" class="alert alert-info" ng-show="new.projects.length > 0">
+                                            <ul>
+                                                <li ng-repeat="newProject in new.projects">{{newProject.name}}</li>
+                                            </ul>
+                                        </div>
+                                        <div class="alert alert-default" ng-show="detail.project.length > 0 || edit">
+                                            <h3 ng-hide="detail.project.length > 0">Проектов нет.</h3>
+                                            <span ng-repeat="project in detail.project">
+                                                <a class="btn btn-primary btn-xs" href="/files/{{project.versions[0].id}}/{{project.name}}" download="download">{{project.name}}</a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -194,8 +311,14 @@
             <div class="panel-footer">
                 <button ng-show="edit" ng-click="switchEdit()" type="button" class="btn btn-danger pull-right"><i class="fa fa-ban"></i> Отменить</button>
                 <span class="pull-right">&nbsp;&nbsp;</span>
-                <button ng-show="edit" ng-click="saveData()" type="button" class="btn btn-success pull-right"><i class="fa fa-floppy-o"></i> Сохранить</button>
+                <button ng-show="edit" ng-click="test()" type="button" class="btn btn-success pull-right"><i class="fa fa-floppy-o"></i> Сохранить</button>
             </div>
         </div>
     </div>
 </div>
+<ng-image-gallery
+    images="gallery.images"
+    methods="gallery.methods"
+    thumbnails="false"
+    bg-close="true"
+></ng-image-gallery>
